feat: complete services